--- a/GES-Project/Packages/manifest.json
+++ b/GES-Project/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.probuilder": "5.2.2",
     "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.timeline": "1.8.6",
